k8s/base/mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app.kubernetes.io/name: mariadb
  ports:
    - name: mysql
      port: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mariadb
    spec:
      enableServiceLinks: false
      containers:
        - name: mariadb
          image: mariadb:13
          args:
            - --max-allowed-packet=67108864
            - --innodb-buffer-pool-size=256M
            - --sql-mode=STRICT_ALL_TABLES
            - --local-infile=0
          ports:
            - name: mysql
              containerPort: 3306
          readinessProbe:
            exec:
              command: ["healthcheck.sh", "--connect", "--innodb_initialized"]
            periodSeconds: 5
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 5Gi
